[project]
name = "immlib"
version = "1.0.0.dev1"
description = """A library of utilites for immutable scientific data."""
authors = [{name="Noah C. Benson", email="nben@uw.edu"}]
license = {"text"="MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["persistent", "immutable", "functional", "scientific", "workflow"]
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS']
dependencies = [
     'pcollections >= 0.2.7',
     'numpy >= 1.24.0',
     'scipy >= 1.7.0',
     'pint >= 0.18.0',
     'docrep >= 0.3.2',
     'joblib >= 1.3.0',
     'cloudpathlib[s3,gs,azure] >= 0.18.0']

[project.optional-dependencies]
dev = ["torch >= 2.2.0", "pyyaml"]
test = ["torch >= 2.2.0", "pyyaml"]

[project.urls]
homepage = "https://github.com/noahbenson/immlib"
documentation = "https://github.com/noahbenson/immlib"
repository = "https://github.com/noahbenson/immlib"
